fix overlap on mobile view

--- a/grails-app/assets/stylesheets/app/main.less
+++ b/grails-app/assets/stylesheets/app/main.less
@@ -250,6 +250,9 @@ a {
       width: 100%;
       position: static;
     }
+    .search-page {
+      clear: left;
+    }
     .page {
       margin-left: 0;
     }
